--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,37 @@
-click==8.1.2
+cachetools==5.0.0
+certifi==2021.10.8
+charset-normalizer==2.0.12
+click==7.1.2
+cloudinary==1.29.0
 colorama==0.4.4
 Flask==2.1.1
 Flask-MySQLdb==1.0.1
+google-api-core==2.7.2
+google-api-python-client==1.12.11
+google-auth==2.6.6
+google-auth-httplib2==0.1.0
+Google-Images-Search==1.4.2
+googleapis-common-protos==1.56.0
+httplib2==0.20.4
+idna==3.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 MarkupSafe==2.1.1
+mysql-connector-python==8.0.29
 mysqlclient==2.1.0
+Pillow==9.1.0
+protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyfiglet==0.8.post1
+pyparsing==3.0.8
 python-dotenv==0.20.0
+python-resize-image==1.1.20
+requests==2.27.1
+rsa==4.8
+six==1.16.0
+termcolor==1.1.0
+uritemplate==3.0.1
+urllib3==1.26.9
 Werkzeug==2.1.1
+windows-curses==2.3.0
